--- a/garage-door/broken-code.yaml
+++ b/garage-door/broken-code.yaml
@@ -40,7 +40,7 @@ sensor:
 esphome:
   name: garagedoorcontroller
   friendly_name: GarageDoorController
-  
+
   on_boot:
     priority: -10
     then:
@@ -68,11 +68,11 @@ logger:
 # Enable Home Assistant API
 api:
   encryption:
-    key: "Cf3EmdudHs3h5j8vaJgNBpMPAud7mTdroWUlntZmh6k="
+    key: !secret api_key1
 
 ota:
   - platform: esphome
-    password: "6d351604b5fd33550beee807e096f724"
+    password: !secret ota_pass1
 
 wifi:
   networks:
@@ -83,8 +83,8 @@ wifi:
 
   # Enable fallback hotspot (captive portal) in case wifi connection fails
   ap:
-    ssid: "Garagedoorcontroller"
-    password: "mLo5Yica0zgq"
+    ssid: !secret wifi_local_ssid
+    password: !secret wifi_local_password
 
 captive_portal:
 
@@ -111,7 +111,7 @@ switch:
 # Reed switches
 binary_sensor:
   - platform: gpio
-    pin: 
+    pin:
       number: $door_open_sensor_pin
       mode:
         input: true
@@ -124,9 +124,9 @@ binary_sensor:
     device_class: garage_door
 
   - platform: gpio
-    pin: 
+    pin:
       number: $door_closed_sensor_pin
-      mode: 
+      mode:
         input: true
         pullup: true
       inverted: true
@@ -146,7 +146,7 @@ cover:
       - switch.turn_on: buzzer_relay
       - delay: 500ms
       - switch.turn_off: buzzer_relay
-      - delay: 500ms      
+      - delay: 500ms
       - switch.turn_on: buzzer_relay
       - delay: 500ms
       - switch.turn_off: buzzer_relay
@@ -157,7 +157,7 @@ cover:
       - switch.turn_on: buzzer_relay
       - delay: 500ms
       - switch.turn_off: buzzer_relay
-      - delay: 500ms      
+      - delay: 500ms
       - switch.turn_on: buzzer_relay
       - delay: 500ms
       - switch.turn_off: buzzer_relay
